# usage-indicator

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  SIGNING.md  biome.json  package.json  release-please-config.json  tsconfig.json  vite.config.ts
.github/: release-please-config.json  renovate.json
.github/workflows/: audit.yml  build.yml  check.yml  code-quality.yml  release.yml  security-audit.yml
src/: App.tsx  index.html
src-tauri/: CHANGELOG.md  Cargo.toml  deny.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: adaptive_poller.rs  api.rs  app.rs  error.rs  events.rs  icon.rs  lib.rs  main.rs  poller.rs  polling.rs  retry.rs  state.rs  system_events.rs  tray.rs
src-tauri/tests/: usage_fetcher_tests.rs
src-tauri/tests/common/: mod.rs
