[package]
name = "usage-indicator"
version = "0.1.4"
description = "A system tray application for monitoring usage statistics of rate-limited cloud services."
authors = ["Ryan Walters"]
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "usage_indicator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wreq = { version = "5", features = [
    "cookies",
    "json",
    "brotli",
    "deflate",
    "gzip",
] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
image = "0.25.8"
dotenvy = "0.15.7"
imageproc = "0.25.0"
ab_glyph = "0.2.32"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_System_Power", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "4.0"
futures-util = "0.3"

[dev-dependencies]
assert2 = "0.3"
rstest = "0.23"
mockito = "1.6"
tokio-test = "0.4"
